# rmm-windows

./: dependencies.yaml
.github/workflows/: build-windows.yaml  build.yaml  labeler.yml  new-issues-to-triage-projects.yml  pr.yaml  trigger-breaking-change-alert.yaml
conda/environments/: all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-131_arch-aarch64.yaml  all_cuda-131_arch-x86_64.yaml
cpp/: CMakeLists.txt
cpp/tests/: CMakeLists.txt
python/librmm/: pyproject.toml
python/rmm/: CMakeLists.txt  pyproject.toml
